fix rerank model

--- a/Dockerfile.with-index-args
+++ b/Dockerfile.with-index-args
@@ -6,7 +6,7 @@ ARG DOCS_DIR=./docs
 ARG MODEL=cl-nagoya/ruri-v3-310m
 
 # Copy documents from specified directory
-COPY ${DOCS_DIR} /docs
+COPY ${DOCS_DIR} /app/docs
 
 # Create index with specified model
 RUN duckdb-hybrid-doc-search index /docs \
@@ -19,5 +19,7 @@ FROM ghcr.io/upamune/duckdb-hybrid-doc-search:latest
 # Copy index file from builder
 COPY --from=builder /app/index.duckdb /app/index.duckdb
 
-# Set default command
-CMD ["serve", "--db", "/app/index.duckdb", "--rerank-model", "cl-nagoya/ruri-v3-310m"]
+WORKDIR /app
+
+# Run the server
+CMD ["serve", "--db", "/app/index.duckdb", "--rerank-model", "cl-nagoya/ruri-v3-reranker-310m"]
